--- a/typedoc-theme/layouts/default.hbs
+++ b/typedoc-theme/layouts/default.hbs
@@ -19,6 +19,21 @@ ul.tsd-type-parameters h4:after {
 ul.tsd-type-parameters h4:before {
     content: '<';
 }
+.readme-container {
+    position: relative;
+}
+.readme-indicate {
+    color: #ccc;
+    position: absolute;
+    top: 0em;
+    right: 0em;
+    font-weight: 100;
+    border: 1px solid;
+    border-width: 0 0 1px 1px;
+    padding: .3em .6em;
+    border-color: #ddd;
+    border-radius: 0 0 0 .2em;
+}
 </style>
 </head>
 <body>
