--- a/typedoc-theme/templates/index.hbs
+++ b/typedoc-theme/templates/index.hbs
@@ -1,3 +1,4 @@
-<div class="tsd-panel tsd-typography">
+<div class="tsd-panel tsd-typography readme-container">
     {{#markdown}}{{{model.readme}}}{{/markdown}}
+    <span class="readme-indicate">readme.md</span>
 </div>
